--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <header>
-        <img class="logo" src="logoZinebBleu.png" alt="ENNASSIH ZINEB">
         <nav>
+            <img class="logo" src="logoZinebBleu.png" alt="ENNASSIH ZINEB">
             <ul class="navigation">
                 <li><a href="#aPropos">A PROPOS</li></a>
                 <li><a href="#Projets ">PROJETS</li></a>
@@ -83,7 +83,7 @@
                 <div class="card">
                     <a href="">
                         <img class="image" src="bougie.jpg" alt="bougie">
-                        <h4></h4>
+                        <h4>Projet 1</h4>
                     </a>
                 </div>
                 <div class="card">
@@ -92,16 +92,17 @@
                         <h4>Fiche produit</h4>
                     </a>
                 </div>
-
+                <div class="card">
+                    <a href="">
+                        <img class="image" src="fleur.webp" alt="fleur">
+                        <h4>Carte</h4>
+                    </a>
+                </div>
             </div>
-
-
-
         </section>
-        <section>
+        <section class="sect5">
             <h2 id="Contact">Me contacter </h2>
-
-            <section class="sect5">
+            <section class="sect6">
                 <div>
                     <form action="">
                         <label for="Nom">Nom</label>
@@ -117,8 +118,13 @@
 
         </section>
 
-
     </main>
+    <footer>
+        <a href=" https://www.linkedin.com/in/zineb-ennassih-172199130/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <input class="cv" type="button" value="Télécharger mon CV" />
+    </footer>
 </body>
 
 </html>
