--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
             <img id="image" src="ZINEB ENNASSIH.jpg" alt="sens du travail">
             <div class="div1">
                 <h2 id="aPropos">A propos</h2>
-                <p> 34 ans J’ai choisi d’axer ma reconversion professionnelle autour de ma créativité et de mon
-                    appétence pour le web et les nouvelles technologies.je suis à la recherche d’une alternance en
-                    developpeur web afin de mettre en pratique mes compétences techniques. Je suis motivé à apprendre,
-                    contribuer et évoluer au sein d’une équipe agile et innovante.</p>
+                <p> Je m'appelle Zineb Ennassih, 34 ans, en reconversion vers le domaine numérique.
+                    Actuellement apprenante au programme La Toile – Emlyon Business School, j’ai acquis les bases du
+                    développement web (HTML, CSS).
+                    Passionnée par les technologies web, j’ai trouvé dans le développement une combinaison parfaite
+                    entre créativité, logique, et résolution de problèmes.
+                    Motivée, curieuse et rigoureuse. Je recherche une alternance en développement web pour renforcer mes
+                    compétences techniques et contribuer à des projets concrets au sein d’une équipe dynamique.
+                </p>
 
             </div>
         </section>
@@ -60,7 +64,7 @@
                 <div class="card">
                     <h3>Softskills</h3>
                     <ul class="ligne">
-                        <li>Curieuse</li>
+                        <li>Dynamique et Curieuse</li>
                         <li>Travail en équipe</li>
                         <li>Capassité d'adaptation</li>
                     </ul>
@@ -70,11 +74,30 @@
 
         </section>
         <section class="sect3">
-            <h2>Formations</h2>
-            <ul class="card">
-                <li>Aprenante au programme la toile Emlyon Bussiness School</li>
-                <li>Licence fondamentale en economie et gestion</li>
-            </ul>
+            <h2>Parcours et Formations</h2>
+            <div class="card">
+                <p>
+                    Titulaire d'une licence en Économie et Gestion, je me suis récemment orientée vers le domaine du
+                    développement web afin d'élargir mes compétences et d'explorer de nouvelles opportunités
+                    professionnelles. Actuellement en formation sur les bases de la conception et du développement web
+                    via
+                    La Toile, je développe progressivement des compétences solides en HTML, CSS, JavaScript, ainsi qu’en
+                    UX/UI design.
+
+                    Mon parcours professionnel m’a permis d’acquérir une expérience significative dans des
+                    environnements
+                    variés, alliant rigueur, relation client et gestion administrative :
+
+                    Superviseure Back Office Commerce Extérieur à la Banque Centrale Populaire au Maroc : gestion des
+                    opérations d’import-export, suivi des dossiers clients, coordination avec les services internes et
+                    conformité réglementaire.
+
+                    Assistante commerciale & accueil client chez Enchères Automobile Aquitaine à Bordeaux : accueil des
+                    clients, organisation de visites, assistance pendant les ventes aux enchères, préparation et gestion
+                    des
+                    documents de vente.
+                </p>
+            </div>
 
         </section>
         <section class="sect4">
@@ -123,7 +146,7 @@
         <a href=" https://www.linkedin.com/in/zineb-ennassih-172199130/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
         </a>
-        <input class="cv" type="button" value="Télécharger mon CV" />
+            <input class="cv" type="button" value="Télécharger mon CV" />
     </footer>
 </body>
 
