--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Boldonse&family=Gidole&family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+
     <title>ENNASSIH ZINEB</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <img class="logo" src="logoZinebBleu.png" alt="ENNASSIH ZINEB">
+            <img class="logo" src="logoZineb.png" alt="ENNASSIH ZINEB">
             <ul class="navigation">
                 <li><a href="#aPropos">A PROPOS</li></a>
                 <li><a href="#Projets ">PROJETS</li></a>
@@ -22,9 +28,16 @@
             </ul>
         </nav>
     </header>
+
     <main>
+        <section class="hero">
+            <h1>Developpeuse web</h1>
+            
+        </section>
+
         <section class="sect1">
-            <img id="image" src="ZINEB ENNASSIH.jpg" alt="sens du travail">
+
+            <img id="photo" src="ZINEB ENNASSIH.jpg" alt="sens du travail">
             <div class="div1">
                 <h2 id="aPropos">A propos</h2>
                 <p> Je m'appelle Zineb Ennassih, 34 ans, en reconversion vers le domaine numérique.
@@ -37,88 +50,123 @@
                 </p>
 
             </div>
+
+
         </section>
         <section class="sect2">
             <h2>Compétences</h2>
-            <section class="sectioncard">
-                <div class="card">
-                    <h3> Hardskills</h3>
-                    <div class="div3">
-                        <figure class="fig">
-                            <i class="fa-brands fa-html5"></i>
-                            <figcaption>
-                                <h4>Html</h4>
+
+            <div class="container">
+                <section class="sectioncard">
+                    <div class="card">
+                        <h3> Hardskills</h3>
+                        <div class="div3">
+                            <figure class="fig">
+                                <i class="fa-brands fa-html5"></i>
+                                <figcaption>
+                                    <h4>Html</h4>
+                                    <p>Intermédiaire</p>
+                                </figcaption>
+                            </figure>
+                            <figure class="fig">
+                                <i class="fa-brands fa-css3-alt"></i>
+                                <figcaption>
+                                    <h4>Css</h4>
+                                </figcaption>
                                 <p>Intermédiaire</p>
-                            </figcaption>
-                        </figure>
-                        <figure class="fig">
-                            <i class="fa-brands fa-css3-alt"></i>
-                            <figcaption>
-                                <h4>Css</h4>
-                            </figcaption>
-                            <p>Intermédiaire</p>
-                        </figure>
+                            </figure>
+
+                        </div>
+
                     </div>
+                    <div class="card">
+                        <h3>Softskills</h3>
+                        <ul class="ligne">
+                            <li>Dynamique et Curieuse</li>
+                            <li>Travail en équipe</li>
+                            <li>Capassité d'adaptation</li>
+                        </ul>
 
-                </div>
-                <div class="card">
-                    <h3>Softskills</h3>
-                    <ul class="ligne">
-                        <li>Dynamique et Curieuse</li>
-                        <li>Travail en équipe</li>
-                        <li>Capassité d'adaptation</li>
-                    </ul>
+                    </div>
+                </section>
 
-                </div>
-            </section>
+            </div>
+
+
 
         </section>
         <section class="sect3">
             <h2>Parcours et Formations</h2>
-            <div class="card">
-                <p>
-                    Titulaire d'une licence en Économie et Gestion, je me suis récemment orientée vers le domaine du
-                    développement web afin d'élargir mes compétences et d'explorer de nouvelles opportunités
-                    professionnelles. Actuellement en formation sur les bases de la conception et du développement web
-                    via
-                    La Toile, je développe progressivement des compétences solides en HTML, CSS, JavaScript, ainsi qu’en
-                    UX/UI design.
+            <section class="parcours">
+                <div class="card">
+                    <h5>Formations</h5>
+                    <p>
+                        Titulaire d'une licence en Économie et Gestion, je me suis récemment orientée vers le domaine du
+                        développement web afin d'élargir mes compétences et d'explorer de nouvelles opportunités
+                        professionnelles. <br>
+                        <br>
+                        Actuellement en formation sur les bases de la conception et du développement
+                        web via La Toile, je développe progressivement des compétences solides en HTML, CSS, JavaScript,
+                        ainsi
+                        qu’en UX/UI design. <br>
+                        <br>
+                        Mon parcours professionnel m’a permis d’acquérir une expérience significative dans des
+                        environnements variés, alliant rigueur, relation client et gestion administrative.
+                    </p>
+                </div>
+                <div class="card">
+                    <h5>Parcours</h5>
+                    <ul>
+                        <li> <b>
+                                Superviseure Back Office Commerce Extérieur à la Banque Centrale Populaire au Maroc
+                                :</b> gestion
+                            des
+                            opérations d’import-export, suivi des dossiers clients, coordination avec les services
+                            internes
+                            et
+                            conformité réglementaire.
 
-                    Mon parcours professionnel m’a permis d’acquérir une expérience significative dans des
-                    environnements
-                    variés, alliant rigueur, relation client et gestion administrative :
+                        </li><br>
+                        <li>
+                            <b>Assistante commerciale & accueil client chez Enchères Automobile Aquitaine à Bordeaux
+                                :</b>
+                            accueil
+                            des clients, organisation de visites, assistance pendant les ventes aux enchères,
+                            préparation et
+                            gestion des documents de vente.
+                        </li>
+                    </ul>
 
-                    Superviseure Back Office Commerce Extérieur à la Banque Centrale Populaire au Maroc : gestion des
-                    opérations d’import-export, suivi des dossiers clients, coordination avec les services internes et
-                    conformité réglementaire.
+                </div>
 
-                    Assistante commerciale & accueil client chez Enchères Automobile Aquitaine à Bordeaux : accueil des
-                    clients, organisation de visites, assistance pendant les ventes aux enchères, préparation et gestion
-                    des
-                    documents de vente.
-                </p>
-            </div>
+            </section>
 
         </section>
         <section class="sect4">
             <h2 id="Projets"> Projets</h2>
             <div class="Projets">
                 <div class="card">
-                    <a href="">
+                    <a href="https://ennassih-zineb.github.io/renduHTMLCSS/" target="_blank">
                         <img class="image" src="bougie.jpg" alt="bougie">
                         <h4>Projet 1</h4>
+                        <p>Rendu pour l'école pour un site de bougie </p>
+                        <button>voir</button>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="https://ennassih-zineb.github.io/fiche_produit/" target="_blank">
                         <img class="image" src="bijoux.jpg" alt="bijoux">
                         <h4>Fiche produit</h4>
+                        <p> Rendu pour l'école pour un site de bijoux</p>
+                        <button>voir</button>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="https://ennassih-zineb.github.io/carte/" target="_blank">
                         <img class="image" src="fleur.webp" alt="fleur">
                         <h4>Carte</h4>
+                        <p> Créer un commentaire en forme de carte </p>
+                        <button>voir</button>
                     </a>
                 </div>
             </div>
@@ -146,7 +194,8 @@
         <a href=" https://www.linkedin.com/in/zineb-ennassih-172199130/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
         </a>
-            <input class="cv" type="button" value="Télécharger mon CV" />
+        <a href=""><input class="cv" type="button" value="Télécharger mon CV" /></a>
+
     </footer>
 </body>
 
