--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
     <main>
         <section class="hero">
-            <h1>Developpeuse web</h1>
-            
+            <h1 class="hero1">Developpeuse web</h1>
         </section>
 
         <section class="sect1">
@@ -194,7 +193,7 @@
         <a href=" https://www.linkedin.com/in/zineb-ennassih-172199130/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
         </a>
-        <a href=""><input class="cv" type="button" value="Télécharger mon CV" /></a>
+        <a href="https://cvdesignr.com/p/67f7da5549b7a" target="_blank"><input class="cv" type="button" value="Télécharger mon CV" /></a>
 
     </footer>
 </body>
